examples/test/testpolicy2222.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2222
  namespace: namespace198
spec:
  podSelector:
    matchLabels:
      key14: value25
      key26: value49
      key2: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value17
      podSelector:
        matchLabels:
          key13: value6
